--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,11 @@ description = ""
 name = "ab-test-fixtures"
 readme = "README.md"
 requires-python = ">=3.12, <4"
-version = "0.1.0"
+version = "0.1.1"
 
 [tool.uv.sources]
-ab-cache  = { git = "https://@github.com/auth-broker/package-cache", rev = "0.1.0" }
-ab-database  = { git = "https://@github.com/auth-broker/package-database", rev = "0.1.0" }
+ab-cache  = { git = "https://@github.com/auth-broker/package-cache", tag= "0.1.1" }
+ab-database  = { git = "https://@github.com/auth-broker/package-database", tag= "0.1.1" }
 
 [tool.hatch.build.targets.sdist]
 include = ["src/ab_test"]
