--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ dev = [
 [project]
 authors = [{email = "53892067+mattcoulter7@users.noreply.github.com", name = "Matthew Coulter"}]
 dependencies = [
-  "ab-cache",
-  "ab-database[sqlite-async]",
+  # "ab-cache",
+  # "ab-database[sqlite-async]",
   "pytest-asyncio>=1.0.0,<2",
   "pytest>=8.4.0,<9"
 ]
@@ -26,10 +26,6 @@ name = "ab-test-fixtures"
 readme = "README.md"
 requires-python = ">=3.12, <4"
 version = "0.1.1"
-
-[tool.uv.sources]
-ab-cache  = { git = "https://@github.com/auth-broker/package-cache", tag= "0.1.1" }
-ab-database  = { git = "https://@github.com/auth-broker/package-database", tag= "0.1.1" }
 
 [tool.hatch.build.targets.sdist]
 include = ["src/ab_test"]
