--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ dev = [
 [project]
 authors = [{email = "53892067+mattcoulter7@users.noreply.github.com", name = "Matthew Coulter"}]
 dependencies = [
-  # "ab-cache",
-  # "ab-database[sqlite-async]",
+  "ab-cache>=0.1.2,<2",
+  "ab-database[sqlite-async]>=0.1.2,<2",
   "pytest-asyncio>=1.0.0,<2",
   "pytest>=8.4.0,<9"
 ]
@@ -25,7 +25,7 @@ description = ""
 name = "ab-test-fixtures"
 readme = "README.md"
 requires-python = ">=3.12, <4"
-version = "0.1.2"
+version = "0.1.3"
 
 [tool.hatch.build.targets.sdist]
 include = ["src/ab_test"]
